[gd_scene load_steps=17 format=3 uid="uid://1t3mkf2bl00v"]

[ext_resource type="FontFile" uid="uid://cmy4wfubc27og" path="res://fonts/AlexBrush-Regular.ttf" id="1_hlcpj"]
[ext_resource type="Texture2D" uid="uid://csrbw7yb6tflv" path="res://assets/main_menu/main_menu_container.png" id="1_tqnjs"]
[ext_resource type="Script" path="res://scenes/main_menu/script/main_menu_script.gd" id="1_wwb02"]
[ext_resource type="Texture2D" uid="uid://ciotwh0mic4kg" path="res://assets/main_menu/background.png" id="4_d5bbt"]
[ext_resource type="Texture2D" uid="uid://o536pvt233b4" path="res://assets/birds/MiniBird_4.png" id="5_gmnmt"]
[ext_resource type="Texture2D" uid="uid://ccao3uamoys4d" path="res://assets/birds/MiniBird_5.png" id="6_e4t1m"]
[ext_resource type="Texture2D" uid="uid://bqdldtnrstr2x" path="res://assets/birds/MiniBird_6.png" id="7_ih160"]
[ext_resource type="Texture2D" uid="uid://bfvg221wtl8b2" path="res://assets/birds/MiniBird_7.png" id="8_lk8qu"]
[ext_resource type="AudioStream" uid="uid://bys8m55s11t2t" path="res://sound/ambience/Alan Å piljak - Silence the world.mp3" id="9_2yfjj"]
[ext_resource type="AudioStream" uid="uid://nuqf3itjwb26" path="res://sound/menu_interaction/btn_interaction_sound.mp3" id="9_16yyb"]

[sub_resource type="LabelSettings" id="LabelSettings_bgt8s"]
font = ExtResource("1_hlcpj")
font_size = 64
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0.184314, 0.384314, 0.113725, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ny0tq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxk7s"]
bg_color = Color(0.215686, 0.713726, 0.247059, 0.329412)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6v7vh"]
bg_color = Color(0.215686, 0.713726, 0.247059, 0.329412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oh33w"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="SpriteFrames" id="SpriteFrames_1aeif"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_gmnmt")
}, {
"duration": 1.0,
"texture": ExtResource("6_e4t1m")
}, {
"duration": 1.0,
"texture": ExtResource("7_ih160")
}, {
"duration": 1.0,
"texture": ExtResource("8_lk8qu")
}],
"loop": true,
"name": &"flying",
"speed": 60.0
}]

[node name="canvas" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 600.0
script = ExtResource("1_wwb02")

[node name="backgroud" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(408, 298)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_d5bbt")

[node name="game_title" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -154.0
offset_top = 6.0
offset_right = 154.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_hlcpj")
theme_override_font_sizes/font_size = 64
text = "Solo Farming"
label_settings = SubResource("LabelSettings_bgt8s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="start_game_container" type="Control" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -170.0
offset_right = 240.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2

[node name="background_sprite" type="Sprite2D" parent="start_game_container"]
position = Vector2(227, 156.5)
scale = Vector2(1.96, 0.8075)
texture = ExtResource("1_tqnjs")

[node name="back_start_game_btn" type="Button" parent="start_game_container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.5
offset_top = -86.0
offset_right = 44.5
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
text = "Back"

[node name="new_game_start_game_btn" type="Button" parent="start_game_container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 72.0
offset_top = -176.0
offset_right = 165.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
text = "New Game"

[node name="empty_start_game_label" type="Label" parent="start_game_container"]
layout_mode = 0
offset_left = 64.0
offset_top = 142.0
offset_right = 192.0
offset_bottom = 174.0
text = "Empty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="confirm_name_start_game_btn" type="Button" parent="start_game_container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 96.0
offset_top = -176.0
offset_right = 189.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
text = "Confirm"

[node name="name_start_game_input" type="LineEdit" parent="start_game_container"]
layout_mode = 0
offset_left = 160.0
offset_top = 142.0
offset_right = 312.0
offset_bottom = 173.0
max_length = 12

[node name="name_start_game_label" type="Label" parent="start_game_container"]
layout_mode = 0
offset_left = 40.0
offset_top = 142.0
offset_right = 155.0
offset_bottom = 174.0
text = "Player Name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_name_start_game_label" type="Label" parent="start_game_container"]
layout_mode = 0
offset_left = 160.0
offset_top = 113.0
offset_right = 288.0
offset_bottom = 139.0
text = "placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="play_game_start_game_btn" type="Button" parent="start_game_container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -143.0
offset_right = 32.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
text = "Play"

[node name="delete_player_start_game_btn" type="Button" parent="start_game_container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 65.0
offset_top = -208.0
offset_right = 129.0
offset_bottom = -177.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
text = "delete"

[node name="buttons_container" type="Control" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -170.0
offset_right = 160.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="background_sprite" type="Sprite2D" parent="buttons_container"]
position = Vector2(160.5, 163.5)
scale = Vector2(1.428, 0.8425)
texture = ExtResource("1_tqnjs")

[node name="start_game_btn" type="Button" parent="buttons_container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.5
offset_top = 62.0
offset_right = 46.5
offset_bottom = 93.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
text = "New Game"

[node name="option_btn" type="Button" parent="buttons_container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -42.5
offset_right = 35.0
offset_bottom = -11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
text = "Options"

[node name="quit_game_btn" type="Button" parent="buttons_container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -148.0
offset_right = 21.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
text = "Quit"

[node name="options_container" type="Control" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = -170.0
offset_right = 288.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2

[node name="background_sprite" type="Sprite2D" parent="options_container"]
position = Vector2(304, 163.5)
scale = Vector2(2.576, 0.8425)
texture = ExtResource("1_tqnjs")

[node name="back_options_btn" type="Button" parent="options_container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.5
offset_top = -85.0
offset_right = 44.5
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
text = "Back"

[node name="pt_option_lang_btn" type="Button" parent="options_container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -67.5
offset_top = -278.0
offset_right = -3.5
offset_bottom = -247.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
toggle_mode = true
text = "PT"

[node name="en_option_lang_btn" type="Button" parent="options_container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 60.5
offset_top = -278.0
offset_right = 124.5
offset_bottom = -247.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
toggle_mode = true
text = "EN"

[node name="language_label" type="Label" parent="options_container"]
layout_mode = 0
offset_left = 105.0
offset_top = 62.0
offset_right = 233.0
offset_bottom = 94.0
text = "Language:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="music_option_btn" type="Button" parent="options_container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -202.5
offset_top = -182.0
offset_right = -138.5
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
toggle_mode = true
text = "Music"

[node name="effects_option_btn" type="Button" parent="options_container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -123.5
offset_top = -182.0
offset_right = -59.5
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
toggle_mode = true
text = "Effects"

[node name="sound_label" type="Label" parent="options_container"]
layout_mode = 0
offset_left = 105.0
offset_top = 118.0
offset_right = 233.0
offset_bottom = 150.0
text = "Sound:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="fullscreen_label" type="Label" parent="options_container"]
layout_mode = 0
offset_left = 362.0
offset_top = 118.0
offset_right = 490.0
offset_bottom = 150.0
text = "Fullscreen:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="fullscreen_option_btn" type="Button" parent="options_container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 78.5
offset_top = -182.0
offset_right = 171.5
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_ny0tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxk7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6v7vh")
theme_override_styles/focus = SubResource("StyleBoxFlat_oh33w")
toggle_mode = true
text = "Fullscreen"

[node name="bird01" type="AnimatedSprite2D" parent="."]
position = Vector2(-56, 136)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_1aeif")
animation = &"flying"
speed_scale = 0.15
metadata/_edit_group_ = true

[node name="bird02" type="AnimatedSprite2D" parent="."]
position = Vector2(856, 240)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_1aeif")
animation = &"flying"
speed_scale = 0.15
flip_h = true
metadata/_edit_group_ = true

[node name="bird_timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="bird_spawn_timer_01" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="bird_spawn_timer_02" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="spawn_bird01" type="Marker2D" parent="."]
position = Vector2(-59, 140)

[node name="spawn_bird02" type="Marker2D" parent="."]
position = Vector2(857, 245)

[node name="btn_click_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_16yyb")
volume_db = -5.0

[node name="background_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_2yfjj")
autoplay = true

[node name="copyright" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 563.0
offset_right = 216.0
offset_bottom = 589.0
text = "Â© 2023 - Segredo | All Rights Reserved"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="start_game_container/back_start_game_btn" to="." method="_on_back_start_game_btn_pressed"]
[connection signal="pressed" from="start_game_container/new_game_start_game_btn" to="." method="_on_new_game_start_game_btn_pressed"]
[connection signal="pressed" from="start_game_container/confirm_name_start_game_btn" to="." method="_on_confirm_name_start_game_btn_pressed"]
[connection signal="pressed" from="start_game_container/play_game_start_game_btn" to="." method="_on_play_game_start_game_btn_pressed"]
[connection signal="pressed" from="start_game_container/delete_player_start_game_btn" to="." method="_on_delete_player_start_game_btn_pressed"]
[connection signal="pressed" from="buttons_container/start_game_btn" to="." method="_on_start_game_btn_pressed"]
[connection signal="pressed" from="buttons_container/option_btn" to="." method="_on_option_btn_pressed"]
[connection signal="pressed" from="buttons_container/quit_game_btn" to="." method="_on_quit_game_btn_pressed"]
[connection signal="pressed" from="options_container/back_options_btn" to="." method="_on_back_options_btn_pressed"]
[connection signal="toggled" from="options_container/pt_option_lang_btn" to="." method="_on_pt_option_lang_btn_toggled"]
[connection signal="toggled" from="options_container/en_option_lang_btn" to="." method="_on_en_option_lang_btn_toggled"]
[connection signal="toggled" from="options_container/music_option_btn" to="." method="_on_music_option_btn_toggled"]
[connection signal="toggled" from="options_container/effects_option_btn" to="." method="_on_effects_option_btn_toggled"]
[connection signal="toggled" from="options_container/fullscreen_option_btn" to="." method="_on_fullscreen_option_btn_toggled"]
[connection signal="timeout" from="bird_timer" to="." method="_on_bird_timer_timeout"]
[connection signal="timeout" from="bird_spawn_timer_01" to="." method="_on_bird_timer_timeout"]
[connection signal="timeout" from="bird_spawn_timer_01" to="." method="_on_bird_spawn_timer_01_timeout"]
[connection signal="timeout" from="bird_spawn_timer_02" to="." method="_on_bird_spawn_timer_02_timeout"]
[connection signal="timeout" from="bird_spawn_timer_02" to="." method="_on_bird_timer_timeout"]
[connection signal="finished" from="btn_click_sound" to="." method="_on_btn_click_sound_finished"]
[connection signal="finished" from="background_sound" to="." method="_on_background_sound_finished"]
